# empty-canvas-builder

./: .gitignore  .prettierignore  IMPROVEMENT_LOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: security-storage.md  study-about-migration-report.md
server/: index.js
src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: app-shell.tsx  backup-modal.tsx  cell-editor.tsx  create-space-modal.tsx  document-editor.tsx  field-controls.tsx  fullscreen-document.tsx  modal.tsx  record-drawer.tsx  rich-editor.tsx  settings-modal.tsx  sidebar.tsx  storage-manager-modal.tsx  urgent-list.tsx  workspace.tsx
src/data/: seed.ts
src/hooks/: use-auth.ts  use-history.ts  use-theme.ts
src/lib/: exporters.ts  history.ts  storage.ts  templates.ts  types.ts  urgent.test.ts  urgent.ts  use-theme.ts  utils.ts
src/models/: block.ts  item-metadata.ts  item.ts  settings.ts  vault.ts
src/routes/: __root.tsx  index.tsx  items.$itemId.tsx  records.tsx  search.tsx  settings.tsx  space.$spaceId.tsx  subjects.$subjectId.tsx  subjects..tsx  sync.tsx
src/stores/: items-store.ts  settings-store.ts  ui-store.ts
src/test/: db.ts  setup.ts
src/types/: gdrive-session.d.ts  routes-shims.d.ts  vault.ts  vite-plugin-react.d.ts
vault-atelier-main/: bun.lockb  package.json
vault-atelier-main/src/: routeTree.gen.ts  styles.css
(+111 files in other folders)
